unit tests updates